--- a/packages/ripple-nuxt-tide/package.json
+++ b/packages/ripple-nuxt-tide/package.json
@@ -39,6 +39,7 @@
     "@dpc-sdp/ripple-publication": "1.12.0",
     "@dpc-sdp/ripple-publish-date-and-author": "1.12.0",
     "@dpc-sdp/ripple-related-links": "1.12.0",
+    "@dpc-sdp/ripple-responsive-img": "1.12.0",
     "@dpc-sdp/ripple-search": "1.12.0",
     "@dpc-sdp/ripple-share-this": "1.12.0",
     "@dpc-sdp/ripple-site-footer": "1.12.0",
