--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.1.3",
     "axe-core": "^3.2.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
